fixing navbar spacing

--- a/frontend/src/styles/headingAndNav.css
+++ b/frontend/src/styles/headingAndNav.css
@@ -57,13 +57,16 @@ header {
   font-style: italic;
 }
 
-.logo-container {
-  width: 100%;
-}
 
 @media (max-width: 800px) {
+
   header {
     flex-flow: column;
+  }
+
+  .logo-container {
+    width: 100%;
+    justify-content: space-between;
   }
 
   .navbar-links {
